Add VInject Attribute feature for first dependency level

--- a/VInjectorTests/VInjectorTests.csproj
+++ b/VInjectorTests/VInjectorTests.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="ComplexDummy.cs" />
     <Compile Include="Dummy.cs" />
+    <Compile Include="IComplexDummy.cs" />
     <Compile Include="IDummy.cs" />
     <Compile Include="VInjectorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
