--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -75,8 +75,16 @@ jobs:
     #- run: |
     # make bootstrap
     #   make release
-    - name: .Net Build
-      uses: EasyDesk/action-dotnet-build@v1.0.0
+    
+    - uses: actions/checkout@v2
+    - name: Setup dotnet
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '4.5.2'
+    - name: Install dependencies
+      run: dotnet restore
+    - name: Build
+      run: dotnet build
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
