--- a/VoldarGames.NetCore.VInjector/VoldarGames.NetCore.VInjector.csproj
+++ b/VoldarGames.NetCore.VInjector/VoldarGames.NetCore.VInjector.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFrameworks>net48;netcoreapp3.1;netstandard2.0;netstandard2.1;net5.0;net6.0</TargetFrameworks>
   </PropertyGroup>
 
 </Project>
